--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -223,6 +223,7 @@ Assessment of the tail behavior is important for example in risk management. How
 %%
 \thesistitle{Hill-estimaattorin asymptoottiset ominaisuudet}
 \advisor{FM Matias Heikkilä}
+\supervisor{Apulaisprof.  Pauliina Ilmonen}
 \degreeprogram{Teknillinen fysiikka ja matematiikka}
 %\department{Elektroniikan ja nanotekniikan laitos}
 \major{Matematiikka ja systeemianalyysi}
